deploy/logs/terminal.log
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/terminal_override_daemon.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
